updated contact file in index
updated contact file in index

--- a/techStack.html
+++ b/techStack.html
@@ -3,13 +3,11 @@
     <head>
         <title>Angular web devolopment</title>
         <style>
-            table,                                                                                          
-            tr,
-            td,
-            th
-            { 
-                border: 1px solid rgb(19,19,25);
-             }
+            table, td, th{
+                border:2px solid rgb(4, 88, 243);
+                border-collapse: collapse;
+                padding: 20px 20px;
+            }
         </style>
     </head>
     <body>
@@ -33,7 +31,7 @@
                     <td>Anguler</td>
                 </tr>
                 <tr>
-                    <td rowspan="2"><strong>Tools</strong></td>
+                    <th rowspan="2"><strong>Tools</strong></th>
                     <td>GIT+GitHub</td>
               </tr>
               <tr>
