--- a/education.html
+++ b/education.html
@@ -3,12 +3,11 @@
     <head>
         <title>education</title>
         <style>
-           table,                                                                                          
-            tr,
-            td,
-            th
-            { 
-                border: 1px solid rgb(19,19,25);
+           table, td, th{ 
+                border: 2px solid rgb(7, 7, 240);
+                border-collapse: collapse;
+                padding: 20px 20px;
+                margin-right: 80px;
              }
         </style>
     </head>
