--- a/home.html
+++ b/home.html
@@ -2,19 +2,35 @@
 <html>
     <head>
         <title>summery</title>
+        <link href="https://fonts.googleapis.com/css2?family=Sofia&display=swap" rel="stylesheet">
+
+        <style>
+            h3{
+                background-color: aqua;
+                text-shadow: 5px 6px 5px;
+                font-family: 'Sofia', cursive;
+
+            }
+            ul li{
+             margin: 20px;
+             list-style-type:lower-roman;
+            }
+        </style>
     </head>
     <body>
+        <h3>career objectives</h3>
+        <p><b>TO WORK IN ORGNIZATION WHERE I CAN LEARN AND GROW MY SKILL AND HELP OGNIZATIONAL GROWTHSS</b></p>
         <h3>professional Summery</h3>
-    </body>
     <ul>
-        <li>having 1 years of experience in devoloping singale page Web Application using Angular 8,HTML5,CSS3,Boostrap 5,Javasript,Typescript</li>
+        <li>having 1 years of experience in devoloping singale page Web Application using <span style="color:rgb(226, 43, 43) ;">Angular 8</span>Angular 8,HTML5,CSS3,Boostrap 5,Javasript,Typescript</li>
         <li>experience on working with version control system-GIT and GitHub</li>
         <li>experience working with JIRA for user stories  and bug tracking</li>
         <li>Strong debugging & Troubleshooting code experience using Chrome devoloper tool</li>
         <li>working exposure on ID's like VS code and notepad++</li>
         <li>Good working experience under Agile methodologhes anvironment</li>
         <li>experiencein using chrome devoloperTool for debugging annd trubeshooting the codeb</li>
-         <li>Knowledge of NodeJS</li> 
+         <li>Knowledge of NodeJS</li>   
          <li>Ability to work with people at all levels in the programe</li>
     </ul>
+</body>
 </html>
